# arcal

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CXX_CAL_SPEC_AUDIT.md  LICENSE  PLAN.md  README.md  arcal-busmon-plan.md  vcpkg.json
cmake/: ScrubIdlcSourcePaths.cmake  arcalConfig.cmake.in  arcalSubsetConfig.cmake.in  install-cyclonedds.sh
config/subsets/: arcal-busmon-cert.json  arcal-simple.json
examples/amti_service_demo/: CMakeLists.txt  README.md  arcal-config.json  main.cpp
examples/smti_service_demo/: CMakeLists.txt  README.md  arcal-config.json  main.cpp
externalizer/cdr/: CMakeLists.txt  CdrExternalizer.cpp  CdrExternalizer.h  CdrPrimitives.h  CdrRegistry.h  ExternalizerLoader.cpp
externalizer/json/: CMakeLists.txt  ExternalizerLoader.cpp  JsonExternalizer.cpp  JsonExternalizer.h  JsonParse.h  JsonPrimitives.h  JsonRegistry.h
include/arcal/: AccessorFactory.h  CdrBridge.h
include/uci/base/: AbstractServiceBusConnection.h  AbstractServiceBusConnectionStatusListener.h  Accessor.h  BooleanAccessor.h  BoundedList.h  BoundedListImpl.h  ByteAccessor.h  DateTimeAccessor.h  DoubleAccessor.h  DurationAccessor.h  Externalizer.h  ExternalizerLoader.h  FloatAccessor.h  IntAccessor.h  Listener.h  LongAccessor.h  PrimitiveAccessors.h  Reader.h  ShortAccessor.h  SimpleList.h  SimpleListImpl.h  StringAccessor.h  TimeAccessor.h  UCIException.h  UUID.h  UnsignedByteAccessor.h  UnsignedIntAccessor.h  UnsignedShortAccessor.h  Writer.h  accessorType.h
include/uci/utils/: All.h  ConnectionPtr.h  Enum.h  FunctionListener.h  Id.h  MessageListener.h  MessagePtr.h  ReaderWriterPtr.h
include/xs/: accessorType.h
lacal/: CMakeLists.txt  README.md
lacal/src/: ClientSession.cpp  ClientSession.h  Protocol.cpp  Protocol.h  Server.cpp  Server.h  TopicMonitor.cpp  TopicMonitor.h  main.cpp
lacal/test/: owp_smoke_test.cpp  protocol_test.cpp
scripts/: build-cal.sh  build-support.sh  build.sh  clean-generated.sh  measure-build.sh  test-cal.sh
src/: ExternalizerLoader.cpp  UUID.cpp
src/arcal/: TypedAccessor.h
src/config/: CalConfig.cpp  CalConfig.h
src/dds/: CalQos.h  CdrBridge.cpp  DdsAbstractServiceBusConnection.cpp  DdsAbstractServiceBusConnection.h  DdsReader.h  DdsReaderCore.cpp  DdsReaderCore.h  DdsWriter.h  DdsWriterCore.cpp  DdsWriterCore.h  QosMapper.h  arcal_payload.c  arcal_payload.cpp  arcal_payload.h  arcal_payload.hpp  arcal_payload.idl
test/cdr/: CMakeLists.txt  cdr_roundtrip.cpp
test/cert/: CAL-005201.cpp  CAL-005202.cpp  CAL-005203.cpp  CAL-005204.cpp  CAL-005208.cpp  CAL-005209.cpp  CAL-005210.cpp  CAL-016015.cpp  CAL-016366.cpp  CMakeLists.txt
test/config/: CMakeLists.txt  cal_config_identity.cpp
test/conform/: CMakeLists.txt  conf_accessor.cpp  conf_accessorType.cpp  conf_asb.cpp  conf_enum.cpp  conf_exception.cpp  conf_externalizer.cpp  conf_generated_global.cpp  conf_generated_lifecycle_target.cpp  conf_lifetime.cpp  conf_lists.cpp  conf_status_listener.cpp  conf_utils.cpp  conf_uuid.cpp  conform_client_link.cpp
test/e2e/: CMakeLists.txt  content_fidelity.cpp  cyclonedds_localhost.xml  listener_lifecycle.cpp  multi_message.cpp  pub_action_command.cpp  pub_continuous.cpp  pub_rich.cpp  read_timeout.cpp  readnowait_empty.cpp  run_e2e_action_command.sh.in  run_e2e_topic_isolation.sh.in  sub_action_command.cpp  topic_isolation.cpp  two_readers_one_writer.cpp  two_writers_one_reader.cpp
test/install/: CMakeLists.txt  run_install_consumer_smoke.cmake  run_lacal_install_smoke.cmake
test/install/consumer/: CMakeLists.txt  main.cpp
test/json/: CMakeLists.txt  json_read_errors.cpp  json_read_roundtrip.cpp  json_write_fields.cpp  json_write_readonly.cpp
test/spec/: PLAN.md
tools/schema_compiler/: compiler.py  requirements.txt
